# clswap

./: README.md  pyproject.toml
src/clman/: __init__.py  cli.py  credstore.py  errors.py  fsio.py  keychain.py  locks.py  paths.py  session.py  store.py  switcher.py
src/clswap/: __init__.py  cli.py  credstore.py  errors.py  keychain.py  locks.py  paths.py  store.py  switcher.py
tests/: conftest.py  test_cli.py  test_keychain.py  test_locks.py  test_macos.py  test_session.py  test_store.py  test_switch.py
