[project]
name = "clswap"
version = "0.2.0"
description = "Per-project Claude Code account switching, driven by a .claude-session file"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.scripts]
clswap = "clswap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clswap"]

[dependency-groups]
dev = ["pytest>=8"]
